--- a/css/style.css
+++ b/css/style.css
@@ -362,8 +362,8 @@ a:hover {
 .populaires .card-rating {
   margin-top: auto;
 }
-/****** Activités ***********/
 
+/* ------------------------------- Activities ------------------------------- */
 .activities {
   margin: 65px 30px;
 }
@@ -371,6 +371,7 @@ a:hover {
 .activities h2 {
   margin-bottom: 30px;
 }
+
 .activities h3 {
   padding: 20px 19px;
   font-size: 1rem;
@@ -383,6 +384,7 @@ a:hover {
   padding: 0;
   list-style: none;
 }
+
 .activities-card {
   overflow: hidden;
   border-radius: 20px;
@@ -390,6 +392,7 @@ a:hover {
   position: relative;
   display: flex;
   flex-direction: column;
+  flex-basis: 100%;
 }
 
 .activities img {
