--- a/css/style.css
+++ b/css/style.css
@@ -51,7 +51,6 @@ a:hover {
   display: flex;
   padding-right: 0px;
   justify-content: space-between;
-
   margin-bottom: 30px;
 }
 
@@ -212,13 +211,11 @@ a:hover {
   content: "\f129";
   display: flex;
   height: 22px;
-  border-radius: 9999px;
+  border-radius: 999px;
   border: 1px solid #d9d9d9;
   align-items: center;
   justify-content: center;
-  flex-basis: 22px;
-  flex-grow: 0;
-  flex-shrink: 0;
+  flex: 0 0 22px;
 }
 
 /* -------------------------------------------------------------------------- */
@@ -265,6 +262,7 @@ a:hover {
 }
 .hebergements img {
   height: 124px;
+  width: 100%;
   border-radius: 15px 15px 0 0;
   border: solid var(--White, #fff);
   border-width: 5px 5px 1px 5px;
@@ -306,6 +304,7 @@ a:hover {
   font-size: 14px;
   height: 12px;
   gap: 2px;
+  margin-top: auto;
 }
 .neutral-star {
   color: var(--main-bg-color);
@@ -315,7 +314,7 @@ a:hover {
 .hebergements-grid-wrapper {
   display: grid;
   gap: 30px;
-  grid-template-columns: repeat(auto-fill, minmax(250px,1fr));
+  grid-template-columns: 1fr 1fr 1fr;
 }
 
 .show-more {
@@ -357,9 +356,6 @@ a:hover {
   display: flex;
   flex-direction: column;
   gap: 5px;
-}
-.populaires .card-rating {
-  margin-top: auto;
 }
 
 /* ------------------------------- Activities ------------------------------- */
@@ -407,7 +403,7 @@ a:hover {
 footer nav > ul {
   display: flex;
   justify-content: space-between;
-  background-color: var(--main-bg-color); 
+  background-color: var(--main-bg-color);
   gap: 30px;
 }
 
@@ -428,16 +424,15 @@ footer h3 {
   font-weight: 700;
 }
 
-footer ul{
+footer ul {
   list-style: none;
   padding: 0;
-  
-} 
+}
 
 /* -------------------------------------------------------------------------- */
 /*                                  Reponsive                                 */
 /* -------------------------------------------------------------------------- */
-/* Tablets < 1024px */
+/* Tablets */
 @media (max-width: 1024px) {
   .search-filters,
   .populaires {
@@ -446,7 +441,7 @@ footer ul{
   .search-filters {
     gap: 20px 15px;
   }
-  .search-filters h3:first-child {
+  .search-filters h3 {
     flex: 1 1 100%;
   }
   .search-filters button {
@@ -477,13 +472,13 @@ footer ul{
 
 /* --------------------------- Fix for 769 to 780 --------------------------- */
 @media (max-width: 780px) {
-  .search-filters button{
+  .search-filters button {
     font-size: 0.875rem;
   }
 }
 
 /* ----------------------------- Mobile < 768px ----------------------------- */
-@media (max-width: 768px) {
+@media (max-width: 767px) {
   .main-container {
     padding: 0;
   }
@@ -491,6 +486,9 @@ footer ul{
   .top-bar {
     flex-direction: column;
     align-items: center;
+  }
+  .top-bar > a {
+    padding: 30px 30px;
   }
   .top-bar nav ul {
     padding: 0;
@@ -506,6 +504,7 @@ footer ul{
     display: flex;
     padding-top: 0px;
     padding-bottom: 15px;
+    border-top: 0px;
     border-bottom: 2px transparent solid;
     justify-content: center;
   }
@@ -513,7 +512,6 @@ footer ul{
   .top-bar nav a:hover {
     border-top: 0px;
     border-bottom: 2px var(--main-color) solid;
-    box-sizing: border-box;
   }
 
   .search-group {
@@ -559,12 +557,16 @@ footer ul{
     column-gap: 10px;
   }
 
-  .search-filters button {   
+  .search-filters button {
     width: calc(50% - 5px);
   }
 
+  .hebergements-grid-wrapper {
+    grid-template-columns: 1fr;
+  }
+
   .hebergements-and-populaires .populaires,
-  .hebergements-grid-wrapper{
+  .hebergements-grid-wrapper {
     gap: 15px;
   }
   .hebergements-and-populaires section {
@@ -574,9 +576,6 @@ footer ul{
   }
   .hebergements-and-populaires section:nth-child(2) {
     flex-direction: column;
-  }
-
-  .hebergements-and-populaires section:first-of-type {
     background-color: white;
     padding: 20px;
   }
@@ -605,12 +604,12 @@ footer ul{
     height: 141px;
   }
 
- footer nav > ul {
+  footer nav > ul {
     flex-direction: column;
     gap: 50px;
     padding: 30px;
   }
-  footer nav > ul > li{
+  footer nav > ul > li {
     padding: 0;
   }
 }
